tests/eu.numberfour.n4js.bugreports.tests/bugreports-tests/IDEBUG_0318_consistency_VariableFieldPropertyDeclarations.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.bugreports.tests.N4JSBugreportTest END_SETUP  */

function foo() : void {}


// XPECT errors --> "void is not a subtype of any." at "foo()"
var v = foo();


var ol = {
	// XPECT errors --> "void is not a subtype of any." at "foo()"
	prop: foo()
};


class C {
	// XPECT errors --> "void is not a subtype of any." at "foo()"
	f = foo();
}


var c : C;

// XPECT errors --> "any is not a subtype of number." at "v"
var test0 : number = v; // ok

// XPECT errors --> "any is not a subtype of number." at "c.f"
var test1 : number = c.f; // error: "void is not a subtype of number."

// XPECT errors --> "any is not a subtype of number." at "ol.prop"
var test2 : number = ol.prop; // error: "void is not a subtype of number."

